--- a/service/example-service-graphql-book/pom.xml
+++ b/service/example-service-graphql-book/pom.xml
@@ -17,11 +17,11 @@
     <parent>
         <groupId>io.americanexpress.synapse</groupId>
         <artifactId>service</artifactId>
-        <version>0.2.1-SNAPSHOT</version>
+        <version>0.2.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>example-service-book-graphql</artifactId>
+    <artifactId>example-service-graphql-book</artifactId>
 
     <dependencies>
         <dependency>
