--- a/service/example-service-rest-book/pom.xml
+++ b/service/example-service-rest-book/pom.xml
@@ -16,11 +16,11 @@
     <parent>
         <groupId>io.americanexpress.synapse</groupId>
         <artifactId>service</artifactId>
-        <version>0.2.1-SNAPSHOT</version>
+        <version>0.2.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>example-service-book-rest</artifactId>
+    <artifactId>example-service-rest-book</artifactId>
 
     <!--Dependencies-->
     <dependencies>
